objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization that address is associated to</description>
        <inlineHelpText>Organization that address is associated to</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address</relationshipLabel>
        <relationshipName>Addresss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>NW O status of address</description>
        <inlineHelpText>NW O Address status with NeighborWorks (Active?)</inlineHelpText>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Description__c</fullName>
        <description>Additional description of address</description>
        <inlineHelpText>Additional description of address</inlineHelpText>
        <label>Address Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1 detail</inlineHelpText>
        <label>Address Line 1 (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2 detail</inlineHelpText>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adress_Type__c</fullName>
        <description>Category of address entered</description>
        <inlineHelpText>Category of address entered</inlineHelpText>
        <label>Address  Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Street Address (FedEx)</fullName>
                </value>
                <value>
                    <fullName>Mailing Address</fullName>
                </value>
                <value>
                    <fullName>P.O. Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City for address</description>
        <inlineHelpText>City for address</inlineHelpText>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresss</relationshipLabel>
        <relationshipName>Addresss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSyncExternalID__c</fullName>
        <description>Corresponding DataSync id for integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>Corresponding DataSync id for integration purposes</inlineHelpText>
        <label>DataSync External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsContactAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this for contact address only</inlineHelpText>
        <label>Is Contact Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_code__c</fullName>
        <label>Mapping code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Main Office of the NWO</description>
        <inlineHelpText>Main Office of the NWO</inlineHelpText>
        <label>Primary(For Organizations Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State associated to address</description>
        <inlineHelpText>State associated to address</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pcode__c</fullName>
        <label>pcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_code__c</fullName>
        <description>Zip code associated to address</description>
        <inlineHelpText>Zip code associated to address</inlineHelpText>
        <label>Zip code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Description__c</columns>
        <columns>IsContactAddress__c</columns>
        <columns>Primary__c</columns>
        <columns>Adress_Type__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>zip_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zip_Code_Validation</fullName>
        <active>true</active>
        <description>Validate that the US zip code format is enforced</description>
        <errorConditionFormula>NOT(REGEX(zip_code__c, &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
        <errorDisplayField>zip_code__c</errorDisplayField>
        <errorMessage>Zip code must be formatted as zip or zip plus 4</errorMessage>
    </validationRules>
</CustomObject>